# starlette-securecookies

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yaml  codeql-analysis.yml
docs/: CNAME  index.html  search.js  securecookies.html
docs/securecookies/: extras.html
docs_templates/: custom.css  module.html.jinja2
securecookies/: __init__.py  errors.py  middleware.py  toplevel.md
securecookies/extras/: __init__.py  csrf.py
src/securecookies/: __init__.py  middleware.py
tests/: conftest.py  test_other-party.py  test_securecookies.py
tests/extras/: test_csrf.py
