[project]
name = "starlette-securecookies"
version = "1.0.2"
description = "Secure cookie middleware for Starlette applications."
authors = [
    {name = "Elias Gabriel", email = "me@eliasfgabriel.com"},
]
license = {file = "LICENSE"}
keywords = ["starlette", "fastapi", "middleware", "encryption", "cookies"]
readme = "README.md"
requires-python = "~=3.7"
dependencies = [
    "starlette>=0.6.1",
    "cryptography>=0",
]

[project.urls]
homepage = "https://example.com"
documentation = "https://securecookies.thearchitector.dev"
repository = "https://github.com/thearchitector/starlette-securecookies"

[tool.pdm]
[tool.pdm.build]
includes = ["CHANGELOG.md", "securecookies/"]
excludes = ["securecookies/toplevel.md"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest~=7.2.2",
    "pdoc~=13.0.1",
    "requests~=2.28.2",
    "httpx>=0.23.3",
]
